[gd_scene load_steps=7 format=3 uid="uid://ch8068hbvi45k"]

[ext_resource type="FontFile" uid="uid://brtb72jyxxtj1" path="res://fonts/Xolonium-Regular.ttf" id="1_2ue24"]
[ext_resource type="Script" path="res://Hud.gd" id="1_61r4l"]
[ext_resource type="PackedScene" uid="uid://dt5yyhum87onh" path="res://volume_slider.tscn" id="4_mnux1"]

[sub_resource type="InputEventAction" id="InputEventAction_hgd0k"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_wf66q"]
events = [SubResource("InputEventAction_hgd0k")]

[sub_resource type="LabelSettings" id="LabelSettings_xv2bi"]
font = ExtResource("1_2ue24")
font_size = 24

[node name="HUDMaster" type="CanvasLayer"]
script = ExtResource("1_61r4l")

[node name="MainMenuLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="MainMenuLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_2ue24")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="MainMenuLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_2ue24")
theme_override_font_sizes/font_size = 64
text = "Dodge the Aliens!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="MainMenuLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_2ue24")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_wf66q")
text = "Start"

[node name="MessageTimer" type="Timer" parent="MainMenuLayer"]
wait_time = 2.0
one_shot = true

[node name="SettingsButton" type="Button" parent="MainMenuLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 50.0
text = "Settings"

[node name="SettingsMenuLayer" type="CanvasLayer" parent="."]
visible = false

[node name="VolumeSliderLabel" type="Label" parent="SettingsMenuLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -80.0
offset_right = 87.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Volume"
label_settings = SubResource("LabelSettings_xv2bi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="SettingsMenuLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 90.0
grow_horizontal = 2
text = "Return"

[node name="VolumeSlider" parent="SettingsMenuLayer" instance=ExtResource("4_mnux1")]
visible = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -15.0
offset_right = 175.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
value = 1.0

[connection signal="pressed" from="MainMenuLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MainMenuLayer/MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="MainMenuLayer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsMenuLayer/ReturnButton" to="." method="_on_return_button_pressed"]
